Upgraded and fixed tests.